5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1643_2443.log
== TEST (2019-04-15 08:20:50) 
-- CODE:
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=float(input("leia a opcao 1 ou 2:"))
import
ve=4*m.pi*r**3
vc=m.pi*x**2*(3*r-x)/3
-- ERROR:
File "XXXX", line 4
    import
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:21:04) 
-- CODE:
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=float(input("leia a opcao 1 ou 2:"))
ve=4*m.pi*r**3
vc=m.pi*x**2*(3*r-x)/3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    ve=4*m.pi*r**3
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:21:05) 
-- CODE:
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=float(input("leia a opcao 1 ou 2:"))
ve=4*m.pi*r**3
vc=m.pi*x**2*(3*r-x)/3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    ve=4*m.pi*r**3
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:27:20) 
-- CODE:
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=float(input("leia a opcao 1 ou 2:"))
import math as m
ve=4*m.pi*r**3
vc=m.pi*x**2*(3*r-x)/3
total=ve-va
if
-- ERROR:
File "XXXX", line 8
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:27:30) 
-- CODE:
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=float(input("leia a opcao 1 ou 2:"))
import math as m
ve=4*m.pi*r**3
vc=m.pi*x**2*(3*r-x)/3
total=ve-va

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ve=4*m.pi*r**3
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:28:11) 
-- CODE:
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=float(input("leia a opcao 1 ou 2:"))
import math as m
ve=4*m.pi*a**3
vc=m.pi*x**2*(3*a-x)/3
total=ve-va

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vc=m.pi*x**2*(3*a-x)/3
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:28:57) 
-- CODE:
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=float(input("leia a opcao 1 ou 2:"))
import math as m
ve=4*m.pi*a**3
vc=m.pi*h**2*(3*a-h)/3
total=ve-va

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total=ve-va
NameError: name 'va' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:29:20) 
-- CODE:
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=float(input("leia a opcao 1 ou 2:"))
import math as m
ve=4*m.pi*a**3
vc=m.pi*h**2*(3*a-h)/3
total=ve-vc

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total=ve-va
NameError: name 'va' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:31:33) 
-- CODE:
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=float(input("leia a opcao 1 ou 2:"))
import math as m
ve=4*m.pi*a**3
vc=m.pi*h**2*(3*a-h)/3
total=ve-vc
if(total=="1"):
	round(total,4)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total=ve-va
NameError: name 'va' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:32:54) 
-- CODE:
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=float(input("leia a opcao 1 ou 2:"))
import math as m
ve=4*m.pi*a**3
vc=m.pi*h**2*(3*a-h)/3
total=ve-vc
if(n=="1"):
	print(round(n,4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total=ve-va
NameError: name 'va' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:35:15) 
-- CODE:
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=float(input("leia a opcao 1 ou 2:"))
import math as m
ve=4*m.pi*a**3
vc=m.pi*h**2*(3*a-h)/3
total=ve-vc
if(vc=="1"):
	print(round(n,4))
else(n=="2"):
	print(round(tatal,4))
	

-- ERROR:
File "XXXX", line 10
    else(n=="2"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:35:37) 
-- CODE:
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=float(input("leia a opcao 1 ou 2:"))
import math as m
ve=4*m.pi*a**3
vc=m.pi*h**2*(3*a-h)/3
total=ve-vc
if(n=="1"):
	print(round(vc,4))
else(n=="2"):
	print(round(tatal,4))
	

-- ERROR:
File "XXXX", line 10
    else(n=="2"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:36:17) 
-- CODE:
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=float(input("leia a opcao 1 ou 2:"))
import math as m
ve=(4/3)*m.pi*a**3
vc=(1/3)m.pi*h**2*(3*a-h)/3
total=ve-vc
if(n=="1"):
	print(round(vc,4))
else(n=="2"):
	print(round(tatal,4))
	

-- ERROR:
File "XXXX", line 6
    vc=(1/3)m.pi*h**2*(3*a-h)/3
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:36:51) 
-- CODE:
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=float(input("leia a opcao 1 ou 2:"))
import math as m
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a-h)/3
total=ve-vc
if(n=="1"):
	print(round(vc,4))
else(n=="2"):
	print(round(tatal,4))
	

-- ERROR:
File "XXXX", line 10
    else(n=="2"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:38:18) 
-- CODE:
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=float(input("leia a opcao 1 ou 2:"))
import math as m
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a-h)/3
total=ve-vc
if n=="1":
	print(round(vc,4))
elsen=="2":
	print(round(tatal,4))
	

-- ERROR:
File "XXXX", line 10
    elsen=="2":
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:38:26) 
-- CODE:
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=float(input("leia a opcao 1 ou 2:"))
import math as m
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a-h)/3
total=ve-vc
if n=="1":
	print(round(vc,4))
else n=="2":
	print(round(tatal,4))
	

-- ERROR:
File "XXXX", line 10
    else n=="2":
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:38:43) 
-- CODE:
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=(input("leia a opcao 1 ou 2:"))
import math as m
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a-h)/3
total=ve-vc
if n=="1":
	print(round(vc,4))
else n=="2":
	print(round(tatal,4))
	

-- ERROR:
File "XXXX", line 10
    else n=="2":
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:39:33) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=(input("leia a opcao 1 ou 2:"))
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a-h)/3
total=ve-vc
if (n=="1"):
	print(round(vc,4))
else (n=="2"):
	print(round(tatal,4))
	

-- ERROR:
File "XXXX", line 10
    else (n=="2"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:41:02) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=(input("leia a opcao 1 ou 2:"))
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a-h)/3
total= ve-vc
if (n=="1"):
	print(round(vc,4))
else (n=="2"):
	print(round(tatal,4))
	

-- ERROR:
File "XXXX", line 10
    else (n=="2"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:41:38) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=(input("leia a opcao 1 ou 2:"))
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a-h)/3
total= ve-vc
if (n=="1"):
	print(round(vc, 4))
else (n=="2"):
	print(round(tatal, 4))
	

-- ERROR:
File "XXXX", line 10
    else (n=="2"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:42:20) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao 1 ou 2:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a-h)/3
total= ve-vc
if (n=="1"):
	print(round(vc, 4))
else (n=="2"):
	print(round(tatal, 4))
	

-- ERROR:
File "XXXX", line 10
    else (n=="2"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:46:29) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao 1 ou 2:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a-h)/3
total= ve-vc

	

-- ERROR:
File "XXXX", line 10
    else (n=="2"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:51:19) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= ve-vc
if n=='1':
	print(ruond(vc, 4))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(ruond(vc, 4))
NameError: name 'ruond' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 08:51:48) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= ve-vc
if n=='1':
	print(round(vc, 4))



-- EXECUTION TIME:
0.152422
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
3.0086
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 08:52:21) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= ve-vc
if n=='1':
	print(round(vc, 4))
else n=='2':
	print(round(v, 4))


-- EXECUTION TIME:
0.193303
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 10
    else n=='2':
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:52:25) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= ve-vc
if n=='1':
	print(round(vc, 4))
else n=='2':
	print(round(v, 4))


-- ERROR:
File "XXXX", line 10
    else n=='2':
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:53:06) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (ve-vc)
if n=='1':
	print(round(vc, 4))
else n=='2':
	print(round(v, 4))


-- ERROR:
File "XXXX", line 10
    else n=='2':
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:53:19) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (ve-vc)
if n=='1':
	print(round(vc, 4))



-- OUTPUT:
3.0086
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:53:54) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (ve-vc)
if n=='1':
	print(round(vc, 4))



-- OUTPUT:
3.0086
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:54:57) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (ve-vc)
if n=='1':
	print(round(vc, 4))
elif n=='2':


-- ERROR:
File "XXXX", line 12
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:56:41) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (ve-vc)
if n=='1':
	print(round(vc, 4))
elif:
	print(round(v,4))


-- ERROR:
File "XXXX", line 10
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:56:54) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (ve-vc)
if n=='1':
	print(round(vc, 4))
else:
	print(round(v,4))


-- OUTPUT:
3.0086
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 08:57:13) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (ve-vc)
if n=='1':
	print(round(vc, 4))
else:
	print(round(v,4))


-- EXECUTION TIME:
0.122489
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
3.0086
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
303.673
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 08:59:16) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (ve-vc)
if n=='1':
	print(round(vc, 4))
else:
	


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:01:00) 
-- CODE:
import math as m *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (ve-vc)
if n=='1':
	print(round(vc, 4))
else:
	


-- ERROR:
File "XXXX", line 1
    import math as m *
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:01:31) 
-- CODE:
import math as m *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (ve-vc)
if n=='1':
	print(round(vc, 4))
else:
	print(round(v, 4))
	


-- ERROR:
File "XXXX", line 1
    import math as m *
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:03:08) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (ve-vc)
if n=='1':
	print(round(vc, 4))
else:
	print(round(v, 4))
	


-- OUTPUT:
3.0086
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 09:03:12) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (ve-vc)
if n=='1':
	print(round(vc, 4))
else:
	print(round(v, 4))
	


-- EXECUTION TIME:
0.174644
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
3.0086
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
303.673
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:03:13) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (ve-vc)
if n=='1':
	print(round(vc, 4))
else:
	print(round(v, 4))
	


-- OUTPUT:
3.0086
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:04:21) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (ve-vc)
if n=='1':
	print(round(vc, 4))
else: n=='2':
	print(round(v, 4))
	


-- ERROR:
File "XXXX", line 10
    else: n=='2':
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:04:37) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (ve-vc)
if n=='1':
	print(round(vc, 4))
else n=='2':
	print(round(v, 4))
	


-- ERROR:
File "XXXX", line 10
    else n=='2':
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:05:48) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (ve-vc)
if n=='1':
	mensagem= vc
	print(round(mensagem, 4))
else n=='2':
	print(round(v, 4))
	


-- ERROR:
File "XXXX", line 11
    else n=='2':
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:12:48) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (ve-vc)
if n=='1':
	mensagem= vc
	print(round(mensagem, 4))
else n=='2':
	print(round(v, 4))
	


-- ERROR:
File "XXXX", line 11
    else n=='2':
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:13:18) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (ve-vc)
if n=='1':
	print(round(vc, 4))
else n=='2':
	print(round(v, 4))
	


-- ERROR:
File "XXXX", line 10
    else n=='2':
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:13:45) 
-- CODE:
import math as m
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (vc-ve)
if n=='1':
	print(round(vc, 4))
else n=='2':
	print(round(v, 4))
	


-- ERROR:
File "XXXX", line 10
    else n=='2':
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:03:35) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (vc-ve)
if n=='1':
	print(round(vc, 4))
else n=='2':
	print(round(v, 4))
	


-- ERROR:
File "XXXX", line 10
    else n=='2':
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:05:18) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (vc-ve)
if n=='1':
	vc=(1/3)*m.pi*h**2*(3*a - h)/3
	print(round(vc, 4))
else n=='2':
	print(round(v, 4))
	


-- ERROR:
File "XXXX", line 11
    else n=='2':
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:06:18) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (vc-ve)
if n=='1':
	vc=(1/3)*m.pi*h**2*(3*a - h)/3
	print(round(vc, 4))
else n=='2':
	vc=(1/3)*m.pi*h**2*(3*a - h)/3
	ve=(4/3)*m.pi*a**3
	v= (vc-ve)
	print(round(v, 4))
	


-- ERROR:
File "XXXX", line 11
    else n=='2':
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:06:30) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*m.pi*a**3
vc=(1/3)*m.pi*h**2*(3*a - h)/3
v= (vc-ve)
if n=='1':
	vc=(1/3)*m.pi*h**2*(3*a - h)/3
	print(round(vc, 4))
else:
	vc=(1/3)*m.pi*h**2*(3*a - h)/3
	ve=(4/3)*m.pi*a**3
	v= (vc-ve)
	print(round(v, 4))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ve=(4/3)*m.pi*a**3
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:07:08) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*pi*a**3
vc=(1/3)*pi*h**2*(3*a - h)/3
v= (vc-ve)
if n=='1':
	vc=(1/3)*m.pi*h**2*(3*a - h)/3
	print(round(vc, 4))
else:
	vc=(1/3)*m.pi*h**2*(3*a - h)/3
	ve=(4/3)*m.pi*a**3
	v= (vc-ve)
	print(round(v, 4))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    vc=(1/3)*m.pi*h**2*(3*a - h)/3
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:07:48) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*pi*a**3
vc=(1/3)*pi*h**2*(3*a - h)/3
v= (vc-ve)
if n=='1':
	vc=(1/3)*pi*h**2*(3*a - h)/3
	print(round(vc, 4))
else:
	vc=(1/3)*pi*h**2*(3*a - h)/3
	ve=(4/3)*pi*a**3
	v= (vc-ve)
	print(round(v, 4))
	


-- OUTPUT:
3.0086
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:08:01) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*pi*a**3
vc=(1/3)*pi*h**2*(3*a - h)/3
v= (vc-ve)
if n=='1':
	vc=(1/3)*pi*h**2*(3*a - h)/3
	print(round(vc, 4))
else:
	vc=(1/3)*pi*h**2*(3*a - h)/3
	ve=(4/3)*pi*a**3
	v= (vc-ve)
	print(round(v, 4))
	


-- EXECUTION TIME:
0.207787
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
3.0086
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-303.673
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:08:34) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=(4/3)*pi*a**3
vc=(1/3)*pi*h**2*(3*a - h)/3
v= (vc-ve)
if n=='1':
	vc=pi*h**2*(3*a - h)/3
	print(round(vc, 4))
else:
	vc=(1/3)*pi*h**2*(3*a - h)/3
	ve=(4)*pi*a**3
	v= (vc-ve)
	print(round(v, 4))
	


-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:09:42) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=4*pi*a**3/3
vc=pi*h**2*(3*a - h)/3
v= (vc-ve)
if n=='1':
	vc=pi*h**2*(3*a - h)/3
	print(round(vc, 4))
else:
	vc=pi*h**2*(3*a - h)/3
	ve=(4)*pi*a**3
	v= (vc-ve)
	print(round(v, 4))
	


-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:09:44) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=4*pi*a**3/3
vc=pi*h**2*(3*a - h)/3
v= (vc-ve)
if n=='1':
	vc=pi*h**2*(3*a - h)/3
	print(round(vc, 4))
else:
	vc=pi*h**2*(3*a - h)/3
	ve=(4)*pi*a**3
	v= (vc-ve)
	print(round(v, 4))
	


-- EXECUTION TIME:
0.176801
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-911.0189
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:09:59) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
ve=4*pi*a**3/3
vc=pi*h**2*(3*a - h)/3
v= (vc-ve)
if n=='1':
	vc=pi*h**2*(3*a - h)/3
	print(round(vc, 4))
else:
	vc=pi*h**2*(3*a - h)/3
	ve=(4)*pi*a**3/3
	v= (vc-ve)
	print(round(v, 4))
	


-- EXECUTION TIME:
0.156847
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:17:10) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
if n==1 :
	V=((pi*(h**2))*((3*a)-h)/3
	print(round(V, 4))
else:
	V=((pi*(h**2))*((3*a)-h)/3
		v1=(4*pi*(a**3))/3
		d=v1 - V
		print(round(d, 4))


-- EXECUTION TIME:
0.22777
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 7
    print(round(V, 4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:17:47) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:")
if n==1 :
	V=((pi*(h**2))*((3*a)-h)/3
	print(round(V, 4))
else:
	V=((pi*(h**2))*((3*a)-h)/3
	v1=(4*pi*(a**3))/3
	d=v1 - V
	print(round(d, 4))


-- EXECUTION TIME:
0.13222
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 7
    print(round(V, 4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:18:36) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=int(input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:"))
if n==1 :
	V=((pi*(h**2))*((3*a)-h)/3
	print(round(V, 4))
else:
	V=((pi*(h**2))*((3*a)-h)/3
	v1=(4*pi*(a**3))/3
	d=v1 - V
	print(round(d, 4))


-- ERROR:
File "XXXX", line 7
    print(round(V, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:20:57) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=int(input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:"))
if n==1 :
	b= ((pi*(h**2))*((3*a)-h)/3
	print(round(b, 4))
else:
	V=((pi*(h**2))*((3*a)-h)/3
	v1=(4*pi*(a**3))/3
	d=v1 - V
	print(round(d, 4))


-- ERROR:
File "XXXX", line 7
    print(round(b, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:38:04) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=int(input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:"))
if n==1 :
	V= ((pi*(h**2))*((3*a)-h)/3
	print(round(b, 4))
else:
	V=((pi*(h**2))*((3*a)-h)/3
	v1=(4*pi*(a**3))/3
	d=v1 - V
	print(round(d, 4))


-- ERROR:
File "XXXX", line 7
    print(round(b, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:38:32) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=int(input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:"))
if n==1 :
	V= ((pi*(h**2))*((3*a)-h)/3
	print(round(V, 4))
else:
	V=((pi*(h**2))*((3*a)-h)/3
	v1=(4*pi*(a**3))/3
	d=v1 - V
	print(round(d, 4))


-- ERROR:
File "XXXX", line 7
    print(round(V, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:39:35) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=int(input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:"))
if n==1 :
	v= ((pi*(h**2))*((3*a)-h)/3
	print(round(v, 4))
else:
	V=((pi*(h**2))*((3*a)-h)/3
	v1=(4*pi*(a**3))/3
	d=v1 - V
	print(round(d, 4))


-- ERROR:
File "XXXX", line 7
    print(round(v, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:39:50) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=int(input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:"))
if n==1 :
	v= ((pi*(h**2))*((3*a)-h)/3
	print(round(v, 4))
else:
	v=((pi*(h**2))*((3*a)-h)/3
	v1=(4*pi*(a**3))/3
	d=v1 - v
	print(round(d, 4))


-- ERROR:
File "XXXX", line 7
    print(round(v, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:41:44) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=int(input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:"))
v= ((pi*(h**2))*((3*a)-h)/3
if (n==1) :
	v= ((pi*(h**2))*((3*a)-h)/3
	print(round(v, 4))
else:
	v=((pi*(h**2))*((3*a)-h)/3
	v1=(4*pi*(a**3))/3
	d=v1 - v
	print(round(d, 4))


-- ERROR:
File "XXXX", line 6
    if (n==1) :
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:46:27) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=int(input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:"))
vr=(4*pi*a*a*a)/3
v= ((pi*h*h))*((3*a-h))/3
vcom= vr-v
if(n==1):
	print(round(v,4))



-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:47:16) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=int(input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:"))
vr=(4*pi*a*a*a)/3
v= ((pi*h*h))*((3*a-h))/3
vcom= vr-v
if(n==1):
	print(round(v,4))
else:
	print(round(vcom,4))



-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:47:18) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=int(input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:"))
vr=(4*pi*a*a*a)/3
v= ((pi*h*h))*((3*a-h))/3
vcom= vr-v
if(n==1):
	print(round(v,4))
else:
	print(round(vcom,4))



-- EXECUTION TIME:
0.133591
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
